--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ body {
     font-family: var(--fonte-secundaria);
     font-weight: 600;
     color: var(--cor-terciaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
@@ -56,14 +56,14 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 34px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-style: normal;
@@ -74,7 +74,7 @@ body {
 }
 
 .apresentacao__conteudo__paragrafo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
     font-weight: 400;
     font-style: normal;
@@ -90,7 +90,7 @@ body {
 
 .apresentacao__botoes-redes-sociais__subtitulo{
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__botoes-redes-sociais__links {
@@ -99,10 +99,10 @@ body {
     align-items: center;
     justify-content: center;
     gap: 16px;
-    width: 378px;
+    width: 50%;
     text-align: center;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 16px;
     font-family: var(--fonte-secundaria);
     font-weight: 600;
@@ -116,10 +116,11 @@ body {
 }
 
 .imagem-pb {
-    object-fit: scale-down;
+    /* object-fit: scale-down;
     width: 615px;
-    height: 488px;
+    height: 488px; */
 
+    width: 50%;
 }
 
 .rodape {
@@ -129,6 +130,31 @@ body {
     background-color: var(--cor-terciaria);
     color: var(--cor-primaria);
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 18px;
+}
+
+@media(max-width: 1024px) {
+
+    .cabecalho {
+        padding: 6% 0 0 6%;
+    }
+
+    .cabecalho__menu {
+        justify-content: center;
+    }
+
+    .apresentacao {
+        flex-direction: column-reverse;
+        padding: 6% 6%;
+    }
+
+    .apresentacao__conteudo {
+        width: auto;
+    }
+
+    .imagem-pb {
+        width: 75%;
+    }
+
 }
